# sentinel-agent

./: .coverage  .dockerignore  .env.dev  .gitignore  AGENT.md  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yaml  langgraph.json  pyproject.toml  synopsis.md  test_base_node.py  test_base_node_standalone.py  test_workflow_shell.py
.github/workflows/: unit-tests.yaml
coverage/: coverage-summary.json
docs/: REPO_PARSING_FLOW_EXPLAINED.md
src/: main.py
src/activities/: README.md  helpers.py  indexing_activities.py  pr_review_activities.py  repo_indexing_activity.py
src/api/fastapi/: __init__.py
src/core/: config.py  database.py  neo4j.py  pr_review_config.py  supabase_client.py  temporal_client.py
src/exceptions/: pr_review_exceptions.py
src/graph/: README.md  __init__.py  cross_file_edge_builder.py  file_graph_builder.py  graph_types.py  knowledge_graph.py  repo_graph_builder.py
src/graph/helpers/: constants.py  graph_types.py  utils.py
src/langgraph/context_assembly/: README.md  __init__.py  base_node.py  candidate_enricher.py  circuit_breaker.py  context_graph.py  context_ranker.py  exceptions.py  file_snippet_extractor.py  langgraph_workflow.py  monitoring.py  pack_assembler.py  rule_based_ranker.py  seed_analyzer.py  service.py  snippet_extractor.py  studio_graph.py  types.py
src/migrations/: 001_pr_review_extensions.sql  002_workflow_run_events.sql  init.sql
src/parser/: README.md  file_types.py  symbol_extractor.py  tree_sitter_parser.py
src/utils/: exception.py  requests.py  response.py  validation.py
src/workers/: README.md  pr_review_worker.py  repo_indexing_worker.py
src/workflows/: README.md  pr_review_workflow.py  repo_indexing_workflow.py
tests/: conftest.py
tests/activities/: test_build_seed_set_activity.py  test_pr_review_activities.py  test_pr_review_persist_activity.py
tests/models/: __init__.py  test_pr_patch_serialization.py
(+166 files in other folders)
