[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "AI Code Reviewer Agent responsible for tracking PR Reviews and detect bugs"
authors = ["Omkar Gade <g.omkar1110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
