[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "AI Code Reviewer Agent responsible for tracking PR Reviews and detect bugs"
authors = ["Omkar Gade <g.omkar1110@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.0.0"
opentelemetry-api = "^1.37.0"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
python-json-logger = "^3.3.0"
pydantic = "^2.11.9"
sqlalchemy = "^2.0.43"
pgvector = "^0.4.1"
pydantic-settings = "^2.10.1"
email-validator = "^2.3.0"
supabase = "^2.20.0"
psycopg2-binary = "^2.9.9"
temporalio = "^1.18.1"
neo4j = "^6.0.3"
tree-sitter-language-pack = "^0.13.0"
tree-sitter = "^0.25.2"
langgraph = "^1.0.6"
anthropic = "^0.76.0"
google-generativeai = "^0.8.6"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
coverage = "^7.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests"
]
